--- a/_posts/2020-06-26-the-story.md
+++ b/_posts/2020-06-26-the-story.md
@@ -2,7 +2,7 @@
 >
 > Venkatesh Rao, [Tempo](https://amzn.to/3i0wsjb)
 
-Story-telling, once the greatest of human arts, is in a sad decline. Consider Homer, the blind poet genius, whether he a historical man or not. An entire culture, our grandfather culture in the modern west, and most of what we know of it is from this single story-teller.
+Story-telling, once the greatest of human arts, is in a sad decline. Consider Homer, the blind poet genius, whether historical man or not. He typifies an entire culture, our grandfather culture in the modern west; much of what we know of it is from this single story-teller.
 
 Rationality leaves no place for stories: stories are incommensurate, their lessons often oblique, the enjoyment of the interaction being part of the point. Compare to operations research, to solving systems of linear equations which exist in a point out of time.
 
