fix broken link and change ital->bold

--- a/_posts/2020-10-01-recently.md
+++ b/_posts/2020-10-01-recently.md
@@ -18,25 +18,25 @@ On the Recoolit side, I submitted an application to Y Combinator! It felt a bit 
 
 ## Movies
 
-I went on a bit of a movie spree while in Tahoe. *Raising Arizona* is an early and fun Coen Brothers joint, too full of mediocre slapstick, but allows you to see their craft developing. You can pick out what will make them great, eventually, but this isn't it. *Bill and Ted's Excellent Adventure* didn't have the same expectations, but somehow I was still disappointed. It's enjoyable, in exactly the ways it's meant to be, but I would have been happier skipping it, I think. *Tammy* was truly terrible, I recommend staying far away.
+I went on a bit of a movie spree while in Tahoe. **Raising Arizona** is an early and fun Coen Brothers joint, too full of mediocre slapstick, but allows you to see their craft developing. You can pick out what will make them great, eventually, but this isn't it. **Bill and Ted's Excellent Adventure** didn't have the same expectations, but somehow I was still disappointed. It's enjoyable, in exactly the ways it's meant to be, but I would have been happier skipping it, I think. **Tammy** was truly terrible, I recommend staying far away.
 
-Later in the month, I saw *Palm Springs* with Andy Samberg. It uses the same conceit as a famous movie from the 80s, but departs enough from it to still be interesting. This was a good light-hearted movie, though perhaps with a bit too much or too heavy-handed philosophical depth.
+Later in the month, I saw **Palm Springs** with Andy Samberg. It uses the same conceit as a famous movie from the 80s, but departs enough from it to still be interesting. This was a good light-hearted movie, though perhaps with a bit too much or too heavy-handed philosophical depth.
 
-*Grapes of Wrath* was great, but definitely worse than the book, especially in close succession. The novel is a tough act to follow, and the movie makes a valiant effort, but misses so much.
+**Grapes of Wrath** was great, but definitely worse than the book, especially in close succession. The novel is a tough act to follow, and the movie makes a valiant effort, but misses so much.
 
 ## Books
 
-Finished *Walk Through Walls*. Marina Abramovic is an incredible inspiration in her approach to art and to life. I tried to catalogue all the pieces described in that book but gave up after the first [100 pages]({{site.baseurl}}{% link _posts/2020-09-02-walk-through-walls.md %}), there is too much richness there.
+Finished **Walk Through Walls**. Marina Abramovic is an incredible inspiration in her approach to art and to life. I tried to catalogue all the pieces described in that book but gave up after the first [100 pages]({{site.baseurl}}{% link _posts/2020-09-02-walk-through-walls.md %}), there is too much richness there.
 
-*The Unbanking of America* would be a good introduction for someone who is new to on-the-ground consumer finance, but didn't add much for me ([full review]({{site.baseurl}}{% link _posts/2020-09-23-unbanking-of-america.md})).
+**The Unbanking of America** would be a good introduction for someone who is new to on-the-ground consumer finance, but didn't add much for me ([full review]({{site.baseurl}}{% link _posts/2020-09-23-unbanking-of-america.md %})).
 
-*Sacred Economics* was extraordinary. It contains a detailed analysis of the fundamental ways in which our society and economy are out of sync with true human values, and a call for an expanded Reunion with the natural world. Reminded me of David Graeber's *Debt* in reconcieving how I thought about the underpinnings of the global financial system and its connection to our human lives, but deeper and more hopeful and joyous. It was challenging to my brain and my heart: I didn't agree with everything but I will be sitting with its ideas for a long time.
+**Sacred Economics** was extraordinary. It contains a detailed analysis of the fundamental ways in which our society and economy are out of sync with true human values, and a call for an expanded Reunion with the natural world. Reminded me of David Graeber's **Debt** in reconcieving how I thought about the underpinnings of the global financial system and its connection to our human lives, but deeper and more hopeful and joyous. It was challenging to my brain and my heart: I didn't agree with everything but I will be sitting with its ideas for a long time.
 
-A gust of cold air after that was Tyler Cowen's *Complacent Class*, which makes the case that America has lost its edge and is stewing in a risk-averse stupor. He marshalls a variety of statistics and qualitative evidence to show that we're just not doing things the way we used to, that we're too satisfied with the status -- or at least the upper class is. This was published a few years ago, but the last few pages look pretty prescient -- that some kind of turmoil will erupt through the stagnation and we may not like it.
+A gust of cold air after that was Tyler Cowen's **Complacent Class**, which makes the case that America has lost its edge and is stewing in a risk-averse stupor. He marshalls a variety of statistics and qualitative evidence to show that we're just not doing things the way we used to, that we're too satisfied with the status -- or at least the upper class is. This was published a few years ago, but the last few pages look pretty prescient -- that some kind of turmoil will erupt through the stagnation and we may not like it.
 
-I picked up *Grapes of Wrath* from a friend's shelf, and devoured it. I had read East of Eden a few years back, and loved it, so I had high hopes and was not disappointed. The humanity, the just absolutely collosal devestation of a nation that this describes; the wanton cruelty, the class warfare, the unfairness and loss. Effective as propaganda, at the very least, but to me so much more. There is a lot of ecology here too, scattered, if you know where to look. Pretty good companion to Sacred Economics, actually.
+I picked up **Grapes of Wrath** from a friend's shelf, and devoured it. I had read East of Eden a few years back, and loved it, so I had high hopes and was not disappointed. The humanity, the just absolutely collosal devestation of a nation that this describes; the wanton cruelty, the class warfare, the unfairness and loss. Effective as propaganda, at the very least, but to me so much more. There is a lot of ecology here too, scattered, if you know where to look. Pretty good companion to Sacred Economics, actually.
 
-Finally, a quick jaunt through *The Soul of a New Machine*. I liked this, gave a bit of factual color to a world I've mostly seen through the TV show Halt and Catch Fire.
+Finally, a quick jaunt through **The Soul of a New Machine**. I liked this, gave a bit of factual color to a world I've mostly seen through the TV show Halt and Catch Fire.
 
 # Closing
 
