Add dosage question to caffeine

--- a/_posts/2020-10-08-caffeine.md
+++ b/_posts/2020-10-08-caffeine.md
@@ -19,8 +19,15 @@ Compared to Gavin's protocol, I'm making a few changes, with the following goals
 1. Test before and during withdrawal, to see the magnitude of effect and the recovery time.
 1. Isolate caffeine vs theanine, since theanine is relatively inconvenient and I want to know if it has any additional benefit.
 
+I'm concerned about the dosage. [This post](https://coffee.stackexchange.com/a/324) suggests that 100mg is approximately the contents of 10g coffee beans, and I regularly consume 2-3x that amount daily. So is 100mg a "realistic" dosage? And if we want to understand the dose-effect relationship, shouldn't we measure a more extreme value? [Gelman discusses](http://www.stat.columbia.edu/~gelman/research/published/27.pdf) the general question:
+1. For estimating a linear effect, you typically want to measure on the extremes.
+1. If there are possible nonlinearities, you might want to measure in the middle as well.
+He concludes:
+> Under reasonable assumptions about nonlinearity, we find that, unless sample size is very large, the design with no interior measurements is best, because with moderate total sample sizes, any nonlinearity in the dose–response will be difficult to detect.
 
-Caveats/concerns:
+This suggests I should try to pick the highest dose in the "rising" part of the graph, maybe 200 or 300mg. I have a lot of time to think about this though, since it doesn't kick in until phase (4).
+
+Other caveats/concerns:
 1. If there is a "ritual" effect from drinking hot water, decaf, or herbal tea, should I avoid those?
 1. If there is a slow practice effect it may confound the results.
 1. Over the study period, many things in my life will be relatively unstable, so this effect if small may wash out, or I may have spurious results.
