fix mistaken baseline

--- a/_posts/2020-10-08-caffeine.md
+++ b/_posts/2020-10-08-caffeine.md
@@ -34,7 +34,7 @@ Other caveats/concerns:
 
 ## Analysis plan:
 My primary analysis will be a linear regression: $$y = \beta_0 + \beta_1x_1 + \beta_2x_2 + \beta_3x_3 + \beta_4x_4$$.
-$$y$$ is the c-score for a given day, the $$x_i$$ are indicators for the periods 1,2,4,5 as described above. So the baseline is "no caffeine".
+$$y$$ is the c-score for a given day, the $$x_i$$ are indicators for the periods 1,2,4,5 as described above. So the baseline is "normal caffeine usage".
 
 I also intend to run another regression with an additional `day_since_start` variable, which should tell me if there's a practice effect.
 
