add rec for electric

--- a/_posts/2020-10-14-heaters.md
+++ b/_posts/2020-10-14-heaters.md
@@ -31,6 +31,6 @@ The electric heat lamps use about 1500 W (5100 BTU/hr), so [we get](https://www.
 
 ## Comparisons
 
-How bad is this? The relevant comparison for almost everyone is driving. Burning 1 gallon of gasoline [creates](https://www.eia.gov/environment/emissions/co2_vol_mass.php) 19.6 lb of CO2. So you'd have to run the propane heater for 4 hours to have the same impact as burning a gallon of gas.
+How bad is this? The relevant comparison for almost everyone is driving. Burning 1 gallon of gasoline [creates](https://www.eia.gov/environment/emissions/co2_vol_mass.php) 19.6 lb of CO2. So you'd have to run the propane heater for 4 hours, or the electric heater for 28 hours, to have the same impact as burning a gallon of gas.
 
-This seems relatively small to me, as long as you're using it infrequently. If you don't worry about the environmental impacts of having people drive to your house from 30 minutes away, then this shouldn't bother you on the margins either.
+If they work equally well, buy the electric one. But either way this seems relatively small to me, as long as you're using it infrequently. If you don't worry about the environmental impacts of having people drive to your house from 30 minutes away, then this shouldn't bother you on the margins either.
